EJBCA 4.0.15
------------
This is a maintenance release containing a few new features and improvements. In all x issues have been resolved.

* Noteworthy changes: 
- LDAP publisher can publish certificate serialnumber to special object class inetOrgPersonWithCertSerno.
- 

Read the full Changelog for details.
For upgrade instructions, please see UPGRADE.

EJBCA 4.0.14
------------
This is a maintenance release containing a few new features and improvements. In all 5 issues have been resolved.

* Noteworthy changes: 
- Active certificates published to a VA publisher that only publishes revoked certificates are no longer stored in the queue.
- Publishers are cached for improved performance.
- New and fixed settings that makes EJBCA work better behind an Apache using ProxyPass, by David Carella.
- Some passwords are not displayed in the console during build anymore, by David Carella.

Read the full Changelog for details.
For upgrade instructions, please see UPGRADE.

EJBCA 4.0.13
------------
This is a maintenance release containing a few new features and improvements. In all 25 issues have been resolved.

* Noteworthy changes: 
- New self-registration work-flow available in the public web.
- Added extended key usage for WiFi EAP authentication. 
- Some build improvements to avoid issues on some platforms (no javascript, no jasper).
- More minor GUI improvements by David Carella of Linagora.
- Minor bug fixes.

Read the full Changelog for details.
For upgrade instructions, please see UPGRADE.

EJBCA 4.0.12
------------
This is a maintenance release containing a few new features and improvements.

* Noteworthy changes: 
- Possibility for External OCSP responder key renewal at absolute times.
- Certificate expiration notifier can now filter on certificate profiles, not only CAs. 
- A publisher for sampling of issued certificates.
- Added user friendly output of certificate profile dependencies when deletion can not be done. 